test/bad/classes/struct02.px

class Struct def
    n: Int

r = Struct()
r.n = 1.0
